<resources>
    <string name="app_name">KidOZone</string>
    <string name="action_settings">Settings</string>
    <string name="title_about_us">About Us</string>
    <string name="info_about_us">“KidOZone” is an application meant to support the immigrant kids seeking a new life in Australia, we will be mainly focusing on the social life of the children. One among the potential problems the kids face includes adapting to the new social life and culture in Australia, our application is designed to help the kids educate regarding these problems they face, using interactive games which conveys the relevant information to them regarding how to behave socially well in the various situations.</string>
    <string name="team_about_us">Roles And Responsibilities</string>
    <string name="member_about_us_1">Leo (Developer)</string>
    <string name="member_about_us_2">Lee (Developer)</string>
    <string name="member_about_us_3">Eldo (Business Analyst)</string>
    <string name="member_about_us_4">Hindu (Data Scientist)</string>




</resources>
