<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".activityService.AboutUsActivity">


    <Button
        android:id="@+id/backButton"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/back_button_pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tv_title_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about_us"
                android:layout_centerHorizontal="true"
                android:textSize="35sp"
                android:fontFamily="monospace"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/tv_intro_product"
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:text="@string/info_about_us"
                android:textSize="17sp"
                android:textColor="#000000"
                android:fontFamily="monospace"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_title_about_us"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_team_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_about_us"
                android:textSize="27sp"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tv_intro_product" />

            <TextView
                android:id="@+id/tv_member_info1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/tv_team_intro"
                android:layout_centerHorizontal="true"
                android:text="@string/member_about_us_1"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_member_info2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/tv_member_info1"
                android:layout_centerHorizontal="true"
                android:text="@string/member_about_us_2"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_member_info3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/tv_member_info2"
                android:layout_centerHorizontal="true"
                android:text="@string/member_about_us_3"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_member_info4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/tv_member_info3"
                android:layout_centerHorizontal="true"
                android:text="@string/member_about_us_4"
                android:textSize="17sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>